--- a/.github/workflows/pb-tests.yml
+++ b/.github/workflows/pb-tests.yml
@@ -17,12 +17,12 @@ jobs:
         steps:
             - name: Docker login ghcr.io
               if: ${{ (github.event_name != 'pull_request' || ! github.event.pull_request.head.repo.fork) && (github.actor != 'dependabot[bot]') }}
-              uses: docker/login-action@v2
+              uses: docker/login-action@v3
               with:
                 password: ${{ secrets.AMP_BUILDPACKS_BOT_GITHUB_TOKEN }}
                 registry: ghcr.io
                 username: ${{ github.actor }}
-            - uses: actions/setup-go@v4
+            - uses: actions/setup-go@v5
               with:
                 go-version: "1.20"
             - name: Install create-package
@@ -32,25 +32,9 @@ jobs:
                 set -euo pipefail
 
                 go install -ldflags="-s -w" github.com/paketo-buildpacks/libpak/cmd/create-package@latest
-            - name: Install pack
-              run: |
-                #!/usr/bin/env bash
-
-                set -euo pipefail
-
-                echo "Installing pack ${PACK_VERSION}"
-
-                mkdir -p "${HOME}"/bin
-                echo "${HOME}/bin" >> "${GITHUB_PATH}"
-
-                curl \
-                  --location \
-                  --show-error \
-                  --silent \
-                  "https://github.com/buildpacks/pack/releases/download/v${PACK_VERSION}/pack-v${PACK_VERSION}-linux.tgz" \
-                | tar -C "${HOME}"/bin -xz pack
-              env:
-                PACK_VERSION: 0.29.0
+            - uses: buildpacks/github-actions/setup-pack@v5.5.3
+              with:
+                pack-version: 0.33.2
             - name: Enable pack Experimental
               if: ${{ false }}
               run: |
@@ -62,8 +46,8 @@ jobs:
 
                 mkdir -p "${HOME}"/.pack
                 echo "experimental = true" >> "${HOME}"/.pack/config.toml
-            - uses: actions/checkout@v3
-            - uses: actions/cache@v3
+            - uses: actions/checkout@v4
+            - uses: actions/cache@v4
               with:
                 key: ${{ runner.os }}-go-${{ hashFiles('**/buildpack.toml', '**/package.toml') }}
                 path: |-
@@ -77,8 +61,8 @@ jobs:
 
                 set -euo pipefail
 
-                if [ -z "${GITHUB_REF+set}" ]; then
-                  echo "GITHUB_REF set to [${GITHUB_REF-<unset>}], but should never be empty or unset"
+                if [[ ${GITHUB_REF:-} != "refs/"* ]]; then
+                  echo "GITHUB_REF set to [${GITHUB_REF:-}], but that is unexpected. It should start with 'refs/*'"
                   exit 255
                 fi
 
@@ -187,13 +171,13 @@ jobs:
         runs-on:
             - ubuntu-latest
         steps:
-            - uses: actions/checkout@v3
-            - uses: actions/cache@v3
+            - uses: actions/checkout@v4
+            - uses: actions/cache@v4
               with:
                 key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
                 path: ${{ env.HOME }}/go/pkg/mod
                 restore-keys: ${{ runner.os }}-go-
-            - uses: actions/setup-go@v4
+            - uses: actions/setup-go@v5
               with:
                 go-version: "1.20"
             - name: Install richgo
